# tui_mcp

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
assets/: DejaVuSansMono.LICENSE.txt
src/: keys.rs  kitty.rs  main.rs  mouse.rs  render.rs  session.rs
