[package]
name = "tui_mcp"
version = "1.1.0"
edition = "2024"
description = "An MCP server for remote-controlling and observing TUI programs via a real PTY and an embedded terminal emulator."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Fabian2000/tui_mcp"
readme = "README.md"
keywords = ["mcp", "tui", "terminal", "pty", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rmcp = { version = "0.8", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
vt100 = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
schemars = "1"
parking_lot = "0.12"
tracing = "0.1"
regex = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
ab_glyph = "0.2"
base64 = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[profile.release]
strip = true
